// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination Can render next pagination 1`] = `
<div
  class="sc-AxjAm jWlVxK"
>
  <nav
    aria-label="Page navigation"
  >
    <ul
      class="pagination mb-0"
    >
      <li
        class="page-item"
      >
        <a
          aria-label="Next"
          class="page-link next"
          href="/products?page=2"
        >
          <span
            aria-hidden="true"
          >
            Next »
          </span>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Pagination Can render prev and next pagination 1`] = `
<div
  class="sc-AxjAm jWlVxK"
>
  <nav
    aria-label="Page navigation"
  >
    <ul
      class="pagination mb-0"
    >
      <li
        class="page-item ml-0"
      >
        <a
          aria-label="Previous"
          class="page-link previous"
          href="/products?page=1"
        >
          <span
            aria-hidden="true"
          >
            « Previous
          </span>
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          aria-label="Next"
          class="page-link next"
          href="/products?page=3"
        >
          <span
            aria-hidden="true"
          >
            Next »
          </span>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Pagination Can render prev button and hide next when number product < perPage +1 1`] = `
<div
  class="sc-AxjAm jWlVxK"
>
  <nav
    aria-label="Page navigation"
  >
    <ul
      class="pagination mb-0"
    >
      <li
        class="page-item ml-0"
      >
        <a
          aria-label="Previous"
          class="page-link previous"
          href="/products?page=1"
        >
          <span
            aria-hidden="true"
          >
            « Previous
          </span>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;
